2005-06-12  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/book_providers.rb:

	  Always raise NoResultsError if there were no results, rather than
	  leaving this up to individual book providers. Also, clean up
	  whitespace.

2005-06-11  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/library.rb:

	Ignores whitespace characters when extracting numbers for ISBN/EAN/etc..

2005-06-07  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/TitledImageCell.m,
	  lib/alexandria/macui/MainWindow.nib/classes.nib,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	- Automatically show the toolbar when it is hidden and the Find menu item 
	  is activated ;
	- Center text in the titled image cell plus removed some dead code.

2005-06-06  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/TitledImageCell.m,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	Work in progress (fixed a lot of bugs in the titled image cell and added
	a Find main menu item that switches to the search toolbar item).

2005-06-05  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/AboutController.rb,
	  lib/alexandria/macui/BookInfoController.rb,
	  lib/alexandria/macui/BooksDataSource.rb,
	  lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/MainWindow.nib/classes.nib,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	Work in progress (make the cover view editable, introduced a date
	picker for the loaning, some fixes).

2005-06-04  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/web_themes.rb:

	Simplified and commented the load method.

	* data/alexandria/icons/book.png,
	  data/alexandria/icons/book_small.png,
	  data/alexandria/icons/less.png,
	  data/alexandria/icons/more.png,