@@ -1,5 +1,11 @@
 2005-06-12  Dafydd Harries  <daf@muse.19inch.net>
 
+	* lib/alexandria/ui/new_book_dialog.rb:
+
+	  Download and display images for book searches.
+
+2005-06-12  Dafydd Harries  <daf@muse.19inch.net>
+
 	* lib/alexandria/book_providers.rb:
 
 	  Always raise NoResultsError if there were no results, rather than
